# gramatyki-grafowe-grupa2-projekt

./: README.md  pyproject.toml  test_run.sh
src/: edge.py  graph.py  node.py  visualization.py
src/productions/: __init__.py  p0.py  p1.py  p10.py  p11.py  p12.py  p3.py  p4.py  p7.py  p8.py  p9.py  production.py
test/: test_p0.py  test_p1.py  test_p10.py  test_p11.py  test_p12.py  test_p3.py  test_p4.py  test_p7.py  test_p8.py  test_p9.py
