[project]
name = "gramatyki-grafowe"
version = "0.1.0"
description = "Projekt gramatyk grafowych z hiperkrawędziami"
authors = [
    {name = "Grupa 2"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "networkx (>=3.6.1,<4.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]

[tool.poetry]
packages = [{include = "src"}]
